--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -10,12 +10,8 @@
     <div id="main">
         {% include 'core_menu.html' %}
         
-        <div id="banner_back"> 
-            <p id="titulo_banner">Impulso Previne</p>
-            <div id="banner">
-                <img src="https://i.imgur.com/t03Vxc7.jpg" width="100%">
-            </div>
-        </div>
+        {% include 'core_header_home.html' %}
+        
         <div id="content1">
             <div id="img_content1"><img src="https://i.imgur.com/kszzlo0.png" width="364px" height="411px"  style="object-fit: cover;"></div>
             <div id="content1_1">
