--- a/impulsoprevinedjango/templates/core_footer.html
+++ b/impulsoprevinedjango/templates/core_footer.html
@@ -1,4 +1,5 @@
-<div id="footer">
-    <p>Realização</p>
-    <div id="meme"><img src="https://i2.wp.com/impulsoprevine.org/wp-content/uploads/2021/08/impulsoicone.png?resize=381%2C169&ssl=1" width="100%" height="100%"></div>
+<div class="footer">
+    <p style="padding:15px;">Realização</p>
+    <img style="padding:15px;" src="https://brasilminingsite.com.br/wp-content/uploads/2020/04/Votorantim.png">
+    <img style="padding:15px;" src="https://impulsosaudemental.org/wp-content/uploads/2021/12/sobre-logo-impulso-gov.png">
 </div>
