--- a/impulsoprevinedjango/templates/core_header.html
+++ b/impulsoprevinedjango/templates/core_header.html
@@ -1,7 +1,8 @@
 {% load static %}
 <head>
-    <title>Impulso</title>
+    <title>{{ titulo }} | Impulso AGP</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="{% static 'home.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
 </head>
