--- a/static/home.css
+++ b/static/home.css
@@ -15,6 +15,31 @@
 }
 
 
+
+/* Rodapé */
+.footer{
+    font-family: var(--bs-font-sans-serif);
+    display: inline-table;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: #000000;
+    text-align:center;
+    padding: 50px;
+    text-align: center;
+}
+
+.footer img {
+    max-height: 50px;
+}
+
+.footer p {
+    display: inline;
+}
+
 /* Home Inicio */
 .home-title {
     height: 70vh;
@@ -25,12 +50,12 @@
     background: var(--main-color);
 }
 
-.container,.container-fluid,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{width:100%;padding-right:var(--bs-gutter-x,.75rem);padding-left:var(--bs-gutter-x,.75rem);margin-right:auto;margin-left:auto}
-@media (min-width:576px){.container,.container-sm{max-width:540px}}
-@media (min-width:768px){.container,.container-md,.container-sm{max-width:720px}}
-@media (min-width:992px){.container,.container-lg,.container-md,.container-sm{max-width:960px}}
-@media (min-width:1200px){.container,.container-lg,.container-md,.container-sm,.container-xl{max-width:1140px}}
-@media (min-width:1400px){.container,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{max-width:1320px}}
+.container{width:100%;padding-right:var(--bs-gutter-x,.75rem);padding-left:var(--bs-gutter-x,.75rem);margin-right:auto;margin-left:auto}
+@media (min-width:576px){.container{max-width:540px}}
+@media (min-width:768px){.container{max-width:720px}}
+@media (min-width:992px){.container{max-width:960px}}
+@media (min-width:1200px){.container{max-width:1140px}}
+@media (min-width:1400px){.container{max-width:1320px}}
 
 .home-title h1 {
     font-style: normal;
@@ -52,6 +77,7 @@
     color: #000000;
     max-width: 724px;
     margin-top: 40px;
+    /* display: inline-flex; */
 }
 
 body {
@@ -149,19 +175,25 @@ body {
     width: 100%;
 }
 
-@media screen and (max-width: 1024px) { */
-    #menu-itens {
-        margin-left: 20%;
-    }
-}
-/* .menu-item {
-    margin-left: 10%;
-    text-decoration:none;
-} */
 .menu-item:hover{
     color: white;
 }
 
+.menu-item-core {
+    color: #141919;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 14.52px;
+    font-weight: 700;
+    font-style: normal;
+    padding-right: 32px;
+    width: 100%;
+}
+
+.menu-item-core:hover{
+    color: var(--main-color);
+}
 
 
 /* Banner */
@@ -235,18 +267,8 @@ body {
     font-size: 3vw;
 }
 
-/* Rodapé */
-#footer{
-    font-size: 3vw;
-    font-weight: bolder;
-    color: rgb(39, 88, 103);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    text-align: center;
-    height: 550px;
-}
+
+
 
 
 
