allow embed googl sites

--- a/impulsoprevinedjango/templates/core_menu.html
+++ b/impulsoprevinedjango/templates/core_menu.html
@@ -9,7 +9,7 @@
         <p>
             <a></a>
             <a class="menu-item-core" href="{% url 'guias' %}" target="_self">Guias</a>
-            <a class="menu-item-core" href="{% url 'paineis' %}" target="_self">Painéis de Indicadores</a>
+            <a class="menu-item-core" href="{% url 'paineis' %}" target="_self">Painéis</a>
             <a class="menu-item-core" href="{% url 'login' %}" target="_self">Login</a>
             <a href="javascript:void(0);" class="iconmenu" onclick="menuIcon()" style="color: white; font-size:36px;"><i class="fa fa-bars"></i></a>
         </p>
