--- a/impulsoprevinedjango/templates/paineis.html
+++ b/impulsoprevinedjango/templates/paineis.html
@@ -1,10 +1,5 @@
 {% load static %}
-<head>
-    <title>Indicadores | Impulso Previne</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="{% static 'home.css' %}">
-    <meta charset="utf-8">
-</head>
+{% include 'core_header.html' with titulo="Paineis" %}
 
 <body>
     <div id="main">
