--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -6,7 +6,17 @@
         {% include 'menu_inicio.html' %}
         
         {% include 'core_header_home.html' %}
-        
+        <div class="row">
+            <div class="column" style="background-color:#aaa;">
+                <h2>Column 1</h2>
+                <p>Some text..</p>
+            </div>
+            <div class="column" style="background-color:#bbb;">
+                <h2>Column 2</h2>
+                <p>Some text..</p>
+            </div>
+        </div>        
+
         <div id="content1">
             <div id="img_content1"><img src="https://i.imgur.com/kszzlo0.png" width="364px" height="411px"  style="object-fit: cover;"></div>
             <div id="content1_1">
@@ -18,7 +28,9 @@
             <p>makdnckjdsnckdsjbcskdncnsjdkcndskjcnsdkjcnsdcnkjdsncjsn dckjsdckjndskjcnsdkjnckjsncjkdsncjkd</p>
         </div>
 
-        {% include 'core_footer.html' %}
+        {% include 'realizacao.html' %}
+
+        {% include 'menu_inicio.html' %}
     </div>
 
 <!-- <script>
