--- a/static/core.css
+++ b/static/core.css
@@ -28,17 +28,10 @@
     letter-spacing: -0.02em;
     color: #000000;
     text-align:center;
-    padding: 50px;
+    padding: 20px;
     text-align: center;
 }
 
-.footer img {
-    max-height: 50px;
-}
-
-.footer p {
-    display: inline;
-}
 
 /* Home Inicio */
 .home-title {
@@ -141,7 +134,7 @@ body {
     display: none;
 }
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
     .menu a:not(:first-child) {display: none;}
     .menu a.iconmenu {
       float: right;
@@ -161,7 +154,7 @@ body {
         display: block;
         text-align: left;
     }
-}
+} */
 
 .menu-item {
     color: #141919;
