--- a/impulsoprevinedjango/templates/menu_inicio.html
+++ b/impulsoprevinedjango/templates/menu_inicio.html
@@ -8,8 +8,8 @@
     <div style="width: 80%; margin-right: 5%; display: flex; justify-content: flex-end;">
         <p>
             <a></a>
-            <a class="menu-item" href="{% url 'guias' %}" target="_self">Guias</a>
-            <a class="menu-item" href="{% url 'paineis' %}" target="_self">Painéis de Indicadores</a>
+            <a class="menu-item" href="{% url 'farol' %}" target="_self">Farol APS</a>
+            <a class="menu-item" href="{% url 'guias' %}" target="_self">Guias e Ferramentas</a>
             <a class="menu-item" href="{% url 'login' %}" target="_self">Login</a>
             <a href="javascript:void(0);" class="iconmenu" onclick="menuIcon()" style="color: white; font-size:36px;"><i class="fa fa-bars"></i></a>
         </p>
