--- a/impulsoprevinedjango/templates/core_menu.html
+++ b/impulsoprevinedjango/templates/core_menu.html
@@ -1,17 +1,17 @@
 {% load static %}
-<div class="menu" id="menu" style="background-color: white; border-bottom: 1px solid #D1D1D2;">
+<div class="menu" id="menu">
     <div class="menu-logo">
         <a href="{% url 'inicio' %}">
-            <img src="{% static 'images/logo-preto.png' %}">
+            <img src="{% static 'images/logo-green.png' %}">
             <p>AGP</p>
         </a>
     </div>
     <div style="width: 80%; margin-right: 5%; display: flex; justify-content: flex-end;">
         <p>
             <a></a>
-            <a class="menu-item-core" href="{% url 'guias' %}" target="_self">Guias</a>
-            <a class="menu-item-core" href="{% url 'paineis' %}" target="_self">Painéis</a>
-            <a class="menu-item-core" href="{% url 'login' %}" target="_self">Login</a>
+            <a class="menu-item" href="{% url 'farol' %}" target="_self">Farol APS</a>
+            <a class="menu-item" href="{% url 'guias' %}" target="_self">Guias e Ferramentas</a>
+            <a class="menu-item" href="{% url 'login' %}" target="_self">Login</a>
             <!-- <a href="javascript:void(0);" class="iconmenu" onclick="menuIcon()" style="color: white; font-size:36px;"><i class="fa fa-bars"></i></a> -->
         </p>
     </div>
