--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -7,25 +7,17 @@
         
         {% include 'core_header_home.html' %}
         <div class="row">
-            <div class="column" style="background-color:#aaa;">
-                <h2>Column 1</h2>
-                <p>Some text..</p>
+            <div style="width: 50%; float: left; padding: 10px; margin-left:70px;">
+                <iframe title="" aria-label="Map" id="datawrapper-chart-6XxRb" src="https://datawrapper.dwcdn.net/6XxRb/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556"></iframe>
             </div>
-            <div class="column" style="background-color:#bbb;">
+            <div style="width: 50%; float: left; padding: 10px;">
                 <h2>Column 2</h2>
                 <p>Some text..</p>
             </div>
-        </div>        
-
-        <div id="content1">
-            <div id="img_content1"><img src="https://i.imgur.com/kszzlo0.png" width="364px" height="411px"  style="object-fit: cover;"></div>
-            <div id="content1_1">
-                <p id="title_content1"><b>Titulo</b></p>
-                <p id="text_content1">Textotexto Texto Texto Textotexto Texto Texto Textotexto Texto Texto Texto textoTexto Texto Textotexto Texto Texto Textotexto Texto Texto</p>
-            </div>
         </div>
-        <div id="content2">
-            <p>makdnckjdsnckdsjbcskdncnsjdkcndskjcnsdkjcnsdcnkjdsncjsn dckjsdckjndskjcnsdkjnckjsncjkdsncjkd</p>
+
+        <div class="footer">
+            <img src="{% static 'images/Paineisiniciativas.png' %}">
         </div>
 
         {% include 'realizacao.html' %}
