--- a/impulsoprevinedjango/templates/paineis.html
+++ b/impulsoprevinedjango/templates/paineis.html
@@ -3,7 +3,7 @@
 
 <body>
     <div id="main">
-        {% include 'core_menu.html' %}
+        {% include 'menu_inicio.html' %}
         <div>
             <p style="font-size: 3vw;font-weight: bolder;color: rgb(39, 88, 103);display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;">
                 Indicadores
