--- a/impulsoprevinedjango/templates/realizacao.html
+++ b/impulsoprevinedjango/templates/realizacao.html
@@ -1,4 +1,4 @@
 {% load static %}
 <div class="footer">
-    <img style="padding:15px;" src="{% static 'images/Creditosrealizacao.png' %}">
+    <img src="{% static 'images/Creditosrealizacao.png' %}">
 </div>
