--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="footer">
-            <img src="{% static 'images/Paineisiniciativas.png' %}">
+            <img href="{% url 'iniciativas' %}" src="{% static 'images/Paineisiniciativas.png' %}">
         </div>
 
         {% include 'realizacao.html' %}
