--- a/impulsoprevinedjango/templates/login.html
+++ b/impulsoprevinedjango/templates/login.html
@@ -8,6 +8,7 @@
         <p style="font-size: 3vw;font-weight: bolder;color: rgb(39, 88, 103);display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;">
             Página em construção
         </p>
+        <img src="{% static 'images/login.png' %}">
     </div>
     {% include 'menu_inicio.html' %}
 </div>
