allow internal embed

--- a/impulsoprevinedjango/templates/iniciativas.html
+++ b/impulsoprevinedjango/templates/iniciativas.html
@@ -5,6 +5,79 @@
 <div id="main">
     {% include 'menu_inicio.html' %}
     
+<div class="container" style="padding: 60 60 60 20px;">
+  <h1 style="color: #00008d;">Guias e Ferramentas</h1>
+  <hr>
+  <h2>Qualidade dos Serviços</h2>
+  <br>
+  <div class="panel-group" id="QS">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#QS" href="#collapseQS1">
+            <i class="arrow right"></i>
+            &nbsp;&nbsp;Estruturação dos Serviços de Saúde
+        </a>
+        </h4>
+      </div>
+      <div id="collapseQS1" class="panel-collapse collapse">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#QS" href="#collapseQS2">
+            <i class="arrow right"></i>
+            &nbsp;&nbsp;Desempenho dos Indicadores de Saúde</a>
+        </h4>
+      </div>
+      <div id="collapseQS2" class="panel-collapse collapse">
+        <iframe src="{ url 'inicio' }"></iframe>
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+  </div> 
+  <h2>Acesso e Território</h2>
+  <br>
+  <div class="panel-group" id="AT">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#AT" href="#collapseAT1">
+            <i class="arrow right"></i>
+            &nbsp;&nbsp;Planejamento  dos Serviços de Saúde e Ações estratégicas
+        </a>
+        </h4>
+      </div>
+      <div id="collapseAT1" class="panel-collapse collapse">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#AT" href="#collapseAT2">
+            <i class="arrow right"></i>
+            &nbsp;&nbsp;Estruturação da Cobertura</a>
+        </h4>
+      </div>
+      <div id="collapseAT2" class="panel-collapse collapse">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+  </div> 
+</div>
+    
+
     {% include 'menu_inicio.html' %}
 </div>
 </body>
