create guias page

--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -13,7 +13,8 @@
         cuidado dentro do sistema único de saúde (SUS). É a porta de entrada do usuário no 
         sistema e tem como finalidade a resolutividade das demandas da comunidade. 
         <br><br>
-        Atualmente trabalhamos com duas frentes principais: <b>Qualidade do serviço</b> onde o objetivo é apoiar  a tomada de decisão de 
+        Atualmente no AGP Saúde, trabalhamos com duas frentes para iniciativas no fortalecimento 
+        da atenção primária: <b>Qualidade do serviço</b> onde o objetivo é apoiar  a tomada de decisão de 
         forma assertiva com base em indicadores de qualidade e desempenho à luz do Previne 
         Brasil, a nova política de financiamento da APS.
         <b>Acesso e Território</b>, cujo objetivo é trabalhar sob a lógica da organização 
