--- a/static/core.css
+++ b/static/core.css
@@ -333,3 +333,43 @@ body {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
 }
+
+
+
+/* Float four columns side by side */
+.columncard {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding */
+  .rowcards {margin: 0 -5px;display: flex;}
+  
+  /* Clear floats after the columns */
+  .rowcards:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .columncard {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    text-align: center;
+    background-color: #f1f1f1;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
