--- a/impulsoprevinedjango/templates/iniciativas.html
+++ b/impulsoprevinedjango/templates/iniciativas.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'core_header.html' with titulo="Login" %}
+{% include 'core_header.html' with titulo="Iniciativas" %}
 
 <body>
 <div id="main">
@@ -66,6 +66,9 @@
             </div>
         </div> 
     </div>
+
+
     {% include 'menu_inicio.html' %}
 </div>
+
 </body>
