--- a/impulsoprevinedjango/templates/paineis.html
+++ b/impulsoprevinedjango/templates/paineis.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'core_header.html' with titulo="Paineis" %}
+{% include 'core_header.html' with titulo="Farol" %}
 
 <body>
     <div id="main">
