--- a/impulsoprevinedjango/templates/login.html
+++ b/impulsoprevinedjango/templates/login.html
@@ -5,9 +5,8 @@
 <div id="main">
     {% include 'menu_inicio.html' %}
     <div>
-        <p style="font-size: 3vw;font-weight: bolder;color: rgb(39, 88, 103);display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;">
-            Página em construção
-        </p>
+        <h1 style="color: #00008d;">Página em construção</h1>
+        <hr>
         <img src="{% static 'images/login.png' %}">
     </div>
     {% include 'menu_inicio.html' %}
