--- a/impulsoprevinedjango/templates/paineis.html
+++ b/impulsoprevinedjango/templates/paineis.html
@@ -2,16 +2,8 @@
 {% include 'core_header.html' with titulo="Farol" %}
 
 <body>
-    <div id="main">
-        {% include 'menu_inicio.html' %}
-        <div>
-            <p style="font-size: 3vw;font-weight: bolder;color: rgb(39, 88, 103);display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;">
-                Indicadores
-            </p>
-        </div>
-        <div>
-            <p align="center"><iframe width="70%" height="4100" src="https://datastudio.google.com/embed/reporting/3fa46357-727b-440c-b9f2-b0696ca1c193/page/sUQZC" frameborder="0" style="border:0" allowfullscreen=""></iframe></p>
-        </div>
-    </div>
+    {% include 'menu_inicio.html' %}
+    <iframe src="https://share.streamlit.io/gabriellearruda/farolaps/main/Inicio.py" style="border:0; width: 100%; height: 2000px;" ></iframe>
+    {% include 'menu_inicio.html' %}
   </body>
 
