update inicio text

--- a/impulsoprevinedjango/templates/core_header_home.html
+++ b/impulsoprevinedjango/templates/core_header_home.html
@@ -4,11 +4,11 @@
             <h1>AGP<br>Saúde</h1>
             <div class="disclaimer">
                 <p>O Programa de Apoio à Gestão Pública - Saúde do Instituto Votorantim 
-                    tem a proposta de apoiar pequenos e médios municípios em dois eixos: 
-                    continuidade do enfrentamento à COVID-19 e atenção integral à saúde. 
-                    A Impulso Gov atua no programa fornecendo soluções focadas em dados 
-                    para auxiliar na missão de melhorar a execução de processos e tomadas 
-                    de decisão da gestão.</p>
+                    oferece mentorias online com especialistas em saúde e disponibilização 
+                    de ferramentas que apoiem os processos de gestão de saúde
+                    dos municipios. 
+                    <!-- Saiba mais sobre nossas temáticas abaixo. -->
+                </p>
             </div>
         </div>
     </div>
