--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -9,9 +9,9 @@
         <div class="row">
             <div class="chamada" style="width: 60%; float: left; padding: 30px; margin-left:40px;">
                 <p>
-        A atenção primária em saúde tem como finalidade ser a coordenadora e ordenadora do 
-        cuidado dentro do sistema único de saúde (SUS). É a porta de entrada do usuário no 
-        sistema e tem como finalidade a resolutividade das demandas da comunidade. 
+        Entre as frentes já abordadas no programa estão <b>Continuidade do Enfrentamento à Covid-19</b>
+        (Fluxo de dados epidemiológicos, Rastreamento de contatos, Vacinação, Comunicação de Risco) 
+        e <b>Atenção Integral à Saúde</b> (Cobertura da atenção primária e Previne Brasil).
         <br><br>
         Atualmente no AGP Saúde, trabalhamos com duas frentes para iniciativas no fortalecimento 
         da atenção primária: <b>Qualidade do serviço</b> onde o objetivo é apoiar  a tomada de decisão de 
@@ -27,7 +27,13 @@
                 </p>
             </div>
             <div style="width: 40%; float: left; padding: 10px; margin: 60px;">
-                <iframe src="https://datawrapper.dwcdn.net/6XxRb/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556"></iframe>
+                <!-- <img src="{% static 'images/atencao_primaria.png' %}">
+                <p>
+                    A atenção primária em saúde tem como finalidade ser a coordenadora e ordenadora do 
+                    cuidado dentro do sistema único de saúde (SUS). É a porta de entrada do usuário no 
+                    sistema e tem como finalidade a resolutividade das demandas da comunidade. 
+                </p> -->
+                <!-- <iframe src="https://datawrapper.dwcdn.net/6XxRb/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556"></iframe> -->
             </div>
         </div>
 
