--- a/impulsoprevinedjango/templates/inicio.html
+++ b/impulsoprevinedjango/templates/inicio.html
@@ -33,7 +33,7 @@
                     cuidado dentro do sistema único de saúde (SUS). É a porta de entrada do usuário no 
                     sistema e tem como finalidade a resolutividade das demandas da comunidade. 
                 </p> -->
-                <!-- <iframe src="https://datawrapper.dwcdn.net/6XxRb/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556"></iframe> -->
+                <iframe src="https://datawrapper.dwcdn.net/6XxRb/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556"></iframe>
             </div>
         </div>
 
