--- a/impulsoprevinedjango/templates/paineis.html
+++ b/impulsoprevinedjango/templates/paineis.html
@@ -2,7 +2,12 @@
 {% include 'core_header.html' with titulo="Farol" %}
 
 <body>
-    {% include 'menu_inicio.html' %}
+  {% include 'menu_inicio.html' %}
+    <div id="main">
+      <div class="container" style="padding: 60 60 60 20px;">
+          <h1 style="color: #00008d;">Farol APS</h1>
+      </div>
+    </div>
     <iframe src="https://share.streamlit.io/gabriellearruda/farolaps/main/Inicio.py" style="border:0; width: 100%; height: 2000px;" ></iframe>
     {% include 'menu_inicio.html' %}
   </body>
