--- a/impulsoprevinedjango/templates/iniciativas.html
+++ b/impulsoprevinedjango/templates/iniciativas.html
@@ -5,9 +5,9 @@
 <div id="main">
     {% include 'menu_inicio.html' %}
     <div class="container" style="padding: 60 60 60 20px;">
-        <h1 style="color: #00008d;">Iniciativas</h1>
+        <h1 style="color: #00008d;">Guias e Ferramentas</h1>
         <hr>
-        <h2>Qualidade dos Serviços</h2>
+        <h2>Continuidade do Enfrentamento à COVID-19</h2>
         <br>
         <div class="panel-group" id="QS">
             <div class="panel panel-default">
@@ -15,28 +15,16 @@
                 <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#QS" href="#collapseQS1">
                     <i class="arrow right"></i>
-                    &nbsp;&nbsp;Estruturação dos Serviços de Saúde
+                    &nbsp;&nbsp;COMUNICAÇÃO DE RISCO
                 </a>
                 </h4>
             </div>
             <div id="collapseQS1" class="panel-collapse collapse">
-                {% include 'guiaseferramentas.html' with id_tematica="desempenho-indicadores" %}
-            </div>
-            </div>
-            <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#QS" href="#collapseQS2">
-                    <i class="arrow right"></i>
-                    &nbsp;&nbsp;Desempenho dos Indicadores de Saúde</a>
-                </h4>
-            </div>
-            <div id="collapseQS2" class="panel-collapse collapse">
-                {% include 'guiaseferramentas.html' with id_tematica="desempenho-indicadores" %}
+                {% include 'guiaseferramentas.html' with id_tematica="comunicacao-risco" %}
             </div>
             </div>
         </div> 
-        <h2>Acesso e Território</h2>
+        <h2>Assistência Integral à Saúde</h2>
         <br>
         <div class="panel-group" id="AT">
             <div class="panel panel-default">
@@ -44,23 +32,11 @@
                 <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#AT" href="#collapseAT1">
                     <i class="arrow right"></i>
-                    &nbsp;&nbsp;Planejamento  dos Serviços de Saúde e Ações estratégicas
+                    &nbsp;&nbsp;PREVINE BRASIL
                 </a>
                 </h4>
             </div>
             <div id="collapseAT1" class="panel-collapse collapse">
-                {% include 'guiaseferramentas.html' with id_tematica="desempenho-indicadores" %}
-            </div>
-            </div>
-            <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#AT" href="#collapseAT2">
-                    <i class="arrow right"></i>
-                    &nbsp;&nbsp;Estruturação da Cobertura</a>
-                </h4>
-            </div>
-            <div id="collapseAT2" class="panel-collapse collapse">
                 {% include 'guiaseferramentas.html' with id_tematica="desempenho-indicadores" %}
             </div>
             </div>
@@ -70,5 +46,17 @@
 
     {% include 'menu_inicio.html' %}
 </div>
+
+<script>
+function openTab(tabName) {
+    var i, x;
+    x = document.getElementsByClassName("containerTab");
+    for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+    }
+    document.getElementById(tabName).style.display = "block";
+}
+</script>
+
 
 </body>
