--- a/impulsoprevinedjango/templates/guiaseferramentas.html
+++ b/impulsoprevinedjango/templates/guiaseferramentas.html
@@ -34,30 +34,29 @@
     <h4>Ferramentas</h4>
     <hr>
     <div class="rowGrid">
-        <div class="columnGrid" onclick="openTab('b1');" style="background:green;">
+        <div class="columnGrid" onclick="openTab('b1');" >
             Indicadores de Desempenho
         </div>
-        <div class="columnGrid" onclick="openTab('b2');" style="background:blue;">
+        <div class="columnGrid" onclick="openTab('b2');" >
             Cadastros Individuais
         </div>
-        <div class="columnGrid" onclick="openTab('b3');" style="background:red;">
+        <div class="columnGrid" onclick="openTab('b3');" >
             Cadastros Inválidos
         </div>
     </div>
     <div id="b1" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-        <iframe src="https://datastudio.google.com/embed/reporting/8dced745-e586-4311-99d1-fc50d7dcea7d/page/p_vgk9r9igoc"" style="width: 100%; height: 800px;"></iframe>
-      </div>
-      
+        <iframe src="https://datastudio.google.com/embed/reporting/8dced745-e586-4311-99d1-fc50d7dcea7d/page/p_vgk9r9igoc"" style="width: 100%; height: 1200px;"></iframe>
+      </div>      
       <div id="b2" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-        <iframe src="https://datastudio.google.com/embed/reporting/6b327ced-a41e-4975-acfc-5092daa10418/page/p_8mefougfrc" style="width: 100%; height: 800px;"></iframe>
-      </div>
-      
+        <iframe src="https://datastudio.google.com/embed/reporting/6b327ced-a41e-4975-acfc-5092daa10418/page/p_8mefougfrc" style="width: 100%; height: 1200px;"></iframe>
+      </div>      
       <div id="b3" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-        <iframe src="https://datastudio.google.com/embed/reporting/25cbf8d9-114e-4e90-8f9e-181c0ff82414/page/p_vuvby50frc" style="width: 100%; height: 800px;"></iframe>
-      </div>        
+        <iframe src="https://datastudio.google.com/embed/reporting/25cbf8d9-114e-4e90-8f9e-181c0ff82414/page/p_vuvby50frc" style="width: 100%; height: 1200px;"></iframe>
+      </div>  
+      <br>      
 </div>
 {% endif %}
 
