--- a/static/core.css
+++ b/static/core.css
@@ -379,14 +379,17 @@ body {
 
   .columnGrid {
     float: left;
-    width: 33.33%;
-    padding: 50px;
-    text-align: center;
-    font-size: 25px;
+    /* width: 33.33%; */
+    padding: 5 5 5 30;
+    font-size: 12px;
+    text-transform: uppercase;
     cursor: pointer;
+  }
+
+  .columnGrid:hover {
+    background: var(--second-color);
     color: white;
   }
-  
   .containerTab {
     padding: 20px;
     color: white;
@@ -394,7 +397,7 @@ body {
   
   .rowGrid:after {
     content: "";
-    display: table;
+    /* display: table; */
     clear: both;
   }
   
@@ -404,4 +407,8 @@ body {
     color: white;
     font-size: 35px;
     cursor: pointer;
+  }
+
+  .row{
+    display: inline-flex;
   }
