--- a/impulsoprevinedjango/templates/guiaseferramentas.html
+++ b/impulsoprevinedjango/templates/guiaseferramentas.html
@@ -68,7 +68,7 @@
         <div class="columncard">
             <a target="_blank" href="https://www.canva.com/design/DAE1ucJRyso/raLl0yYaXgZTsHPtSUTp3g/view?utm_content=DAE1ucJRyso&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">
                 <div class="card">
-                <img src="{% static 'images/card-covid.png' %}" style="width:100%">
+                <img src="{% static 'images/card-covid.png' %}" style="height: 245px; width:170px;">
                     <br><br><p>Comunicação COVID-19 atualização variantes</p>
                 </div>
             </a>
