fix ferramentas size

--- a/impulsoprevinedjango/templates/guiaseferramentas.html
+++ b/impulsoprevinedjango/templates/guiaseferramentas.html
@@ -29,6 +29,14 @@
                 </div>
             </a>
         </div>
+        <div class="columncard">
+            <a target="_blank" href="{% static 'files/guia-indicadores2022.pdf' %}">
+                <div class="card" style="height: 350px;">
+                    <img src="{% static 'images/card-ind2022.png' %}" style="height: 245px; width:170px;">
+                    <br><br><p>Mudanças Indicadores 2022</p>
+                </div>
+            </a>
+        </div>
     </div>
     <br><br><br><br>
     <h4>Ferramentas</h4>
