--- a/impulsoprevinedjango/templates/guiaseferramentas.html
+++ b/impulsoprevinedjango/templates/guiaseferramentas.html
@@ -46,10 +46,7 @@
             Indicadores de Desempenho
         </div>
         <div class="columnGrid" onclick="openTab('b2');" >
-            Cadastros Individuais
-        </div>
-        <div class="columnGrid" onclick="openTab('b3');" >
-            Cadastros Inválidos
+            Cadastros
         </div>
     </div>
     <div id="b1" class="containerTab" style="display:none;">
@@ -59,10 +56,6 @@
       <div id="b2" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
         <iframe src="https://datastudio.google.com/u/0/reporting/6b327ced-a41e-4975-acfc-5092daa10418/page/p_vb7elrqgrc" style="width: 100%; height: 1800px;"></iframe>
-      </div>      
-      <div id="b3" class="containerTab" style="display:none;">
-        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-        <iframe src="https://datastudio.google.com/embed/reporting/25cbf8d9-114e-4e90-8f9e-181c0ff82414/page/p_vuvby50frc" style="width: 100%; height: 1800px;"></iframe>
       </div>  
       <br>      
 </div>
