--- a/impulsoprevinedjango/templates/guiaseferramentas.html
+++ b/impulsoprevinedjango/templates/guiaseferramentas.html
@@ -48,6 +48,9 @@
         <div class="columnGrid" onclick="openTab('b2');" >
             Cadastros
         </div>
+        <div class="columnGrid" onclick="openTab('b2');" >
+            Validação de Cadastros
+        </div>
     </div>
     <div id="b1" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
@@ -56,7 +59,11 @@
       <div id="b2" class="containerTab" style="display:none;">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
         <iframe src="https://datastudio.google.com/embed/reporting/6b327ced-a41e-4975-acfc-5092daa10418/page/p_vb7elrqgrc" style="width: 100%; height: 1800px;"></iframe>
-      </div>  
+      </div>
+      <div id="b2" class="containerTab" style="display:none;">
+        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+        <iframe src="https://datastudio.google.com/u/0/reporting/6b327ced-a41e-4975-acfc-5092daa10418/page/p_utk2hn8nrc" style="width: 100%; height: 1800px;"></iframe>
+      </div>
       <br>      
 </div>
 {% endif %}
